--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "equal-vue": "^0.79.3",
+    "normalize.css": "^8.0.1",
     "register-service-worker": "^1.7.2",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
+    "vue3-mobile-detection": "^1.0.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
