--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
     "core-js": "^3.8.3",
     "equal-vue": "^0.79.3",
     "normalize.css": "^8.0.1",
+    "postcss": "^8.4.12",
     "register-service-worker": "^1.7.2",
+    "tailwindcss": "^3.0.24",
     "vue": "^3.2.13",
     "vue-class-component": "^8.0.0-0",
     "vue-router": "^4.0.3",
